src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_InvalidPropertyPathInControlTemplate.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<!--
/*******************************************************************
 * Purpose: Verifies parse exception when a property Path value is invalid in a ControlTemplate.
 * Contributors: Microsoft
 *
 
  
 * Revision:         $Revision: 2 $
 
 * Filename:         $Source: //depot/devdiv/Orcas/SP/feature/WPF/wpf/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_InvalidPropertyPathInControlTemplate.xaml $
 ********************************************************************/
-->
<StackPanel xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
    <Button Name="TemplatedControlType_ContentControl" Style="{x:Null}">
      <Button.Template>
      
        <ControlTemplate TargetType="{x:Type Button}">
          <Button Background="Pink" Name="TemplateRoot_Control" />
          <ControlTemplate.Triggers>
            <EventTrigger SourceName="TemplateRoot_Control" RoutedEvent="Mouse.PreviewMouseDown">
              <EventTrigger.Actions>
				  <BeginStoryboard>
					  <Storyboard
        TargetName="TemplateRoot_Control"
        Storyboard.TargetProperty="Panel.Background)"
        BeginTime="0"
        Duration="0:0:2" />
				  </BeginStoryboard>                
              </EventTrigger.Actions>
            </EventTrigger>
          </ControlTemplate.Triggers>
        </ControlTemplate>
      </Button.Template>
    </Button>
</StackPanel>
</Page>
